Adding some JS.

--- a/index.html
+++ b/index.html
@@ -1,10 +1,15 @@
 <html>
   <title>Sudoku Solver</title>
+  <head></head>
   <body>
     <form>
       <label>Sudoku String</label>
       <input type="text" name="sudoku"/>
-      <input type="submit" value="Submit"/>
+      <button type="button">Solve</button></button>
     </form>
+    <div class="js-solved-board"></div>
   </body>
+
+  <script src="javascript/jquery-2.1.1.min.js"></script>
+  <script src="javascript/sudoku.js"></script>
 </html>
