Converting everything to Opal.

--- a/index.html
+++ b/index.html
@@ -10,6 +10,5 @@
     <div class="js-solved-board"></div>
   </body>
 
-  <script src="javascript/jquery-2.1.1.min.js"></script>
-  <script src="javascript/sudoku.js"></script>
+  <script src="sudoku.js"></script>
 </html>
