--- a/index.html
+++ b/index.html
@@ -5,9 +5,13 @@
     <form>
       <label>Sudoku String</label>
       <input type="text" name="sudoku"/>
-      <button type="button">Solve</button></button>
+      <button type="button">Solve</button>
     </form>
-    <div class="js-solved-board"></div>
+
+    <p>
+      Solved Board:
+      <span class="js-solved-board"></span>
+    </p>
   </body>
 
   <script src="sudoku.js"></script>
